[gd_scene load_steps=20 format=2]

[ext_resource path="res://assets/sprites/crab_walk2.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/crab_inaction1.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/crab_walk1.png" type="Texture" id=3]
[ext_resource path="res://src/objects/player.gd" type="Script" id=4]
[ext_resource path="res://assets/sounds/pickup.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/sounds/jump.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/sounds/walk.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/sprites/crab_inaction2.png" type="Texture" id=9]
[ext_resource path="res://assets/sprites/crab_jump2.png" type="Texture" id=10]
[ext_resource path="res://assets/sprites/crab_jump3.png" type="Texture" id=11]
[ext_resource path="res://assets/sprites/crab_jump1.png" type="Texture" id=12]
[ext_resource path="res://assets/sprites/crab_attack2.png" type="Texture" id=13]
[ext_resource path="res://assets/sprites/crab_attack3.png" type="Texture" id=14]
[ext_resource path="res://assets/sprites/crab_attack1.png" type="Texture" id=15]
[ext_resource path="res://assets/sprites/crab_attack4.png" type="Texture" id=16]
[ext_resource path="res://src/objects/camera.tscn" type="PackedScene" id=17]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7.5, 8 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 9 ), ExtResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 2.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 16 ) ],
"loop": true,
"name": "attack",
"speed": 12.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 1 ) ],
"loop": true,
"name": "walk",
"speed": 7.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 10 ) ],
"loop": false,
"name": "jump_start",
"speed": 15.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 11 ) ],
"loop": false,
"name": "jump_end",
"speed": 15.0
} ]

[sub_resource type="Animation" id=3]
resource_name = "invulnerable"
length = 1.8
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9, 1.2, 1.5, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true, false, true ]
}

[node name="player" type="KinematicBody2D" groups=[
"player",
]]
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "idle"
frame = 2
playing = true

[node name="camera" parent="." instance=ExtResource( 17 )]

[node name="sounds" type="Node2D" parent="."]

[node name="pickup" type="AudioStreamPlayer2D" parent="sounds"]
stream = ExtResource( 5 )

[node name="walk" type="AudioStreamPlayer2D" parent="sounds"]
stream = ExtResource( 8 )
volume_db = -25.732

[node name="Timer" type="Timer" parent="sounds/walk"]
wait_time = 0.857

[node name="jump" type="AudioStreamPlayer2D" parent="sounds"]
stream = ExtResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/invulnerable = SubResource( 3 )
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_sprite_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite" to="." method="_on_sprite_frame_changed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
